# perlweeklychallenge-club

./: .gitignore  .pre-commit-config.yaml  README.md  blog.txt  ch-1.cl  ch-1.pl  ch-1.raku  ch-2.lsp  ch-2.pl  clean-up-dir.sh  gc-challenge-056.json  gc-challenge-145.json  gc-challenge-191.json  gc-challenge-195.json  gc-challenge-197.json  gc-challenge-215.json  guest-language-breakdown.json  guest-leaders.json  guests.json  list  list1  members.json  missing_perl_tasks.sh  pwc  pwc-current.json  pwc-language-breakdown-summary.json  pwc-language-breakdown.json  pwc-leaders.json  pwc-summary-1-30.json  pwc-summary-121-150.json  pwc-summary-151-180.json  pwc-summary-181-210.json  pwc-summary-211-240.json  pwc-summary-31-60.json  pwc-summary-61-90.json  pwc-summary-91-120.json  pwc-summary.json  recap-challenge-325.md  template.raku  xy.pm
arne-sommer/: blog.txt
challenge-033/: commit-msg
challenge-050/: kevincolyer
challenge-051/: kevincolyer
challenge-053/: kevincolyer
challenge-230/: blog.txt
challenge-231/: blog.txt
challenge-244/: blog.txt
challenge-285/ppentchev/python/: README.md  pyproject.toml  ruff-base.toml  tox.ini
challenge-285/ppentchev/python/requirements/: install.txt  ruff.txt  test.txt
challenge-285/ppentchev/python/src/perl_weekly_285/: __init__.py  ch-2.py  defs.py  routes.py
challenge-285/ppentchev/python/tests/unit/: __init__.py  test_change.py  test_metadata.py  test_routes.py
challenge-285/ppentchev/rust/: Cargo.toml
challenge-285/ppentchev/rust/src/: change.rs  defs.rs  lib.rs  routes.rs
challenge-285/ppentchev/rust/src/tests/: change.rs  mod.rs  routes.rs
challenge-287/ppentchev/rust/: Cargo.toml
challenge-289/ppentchev/rust/: Cargo.toml
challenge-290/ppentchev/rust/: Cargo.toml  run-clippy.sh
challenge-290/ppentchev/rust/src/: ch_1.rs  ch_2.rs  lib.rs
challenge-293/ppentchev/rust/: Cargo.toml  README.md  run-clippy.sh
challenge-293/ppentchev/rust/src/: ch_1.rs  ch_2.rs  defs.rs  lib.rs
challenge-296/ppentchev/rust/: Cargo.toml  run-clippy.sh
challenge-296/ppentchev/rust/src/: ch_1.rs  ch_2.rs  lib.rs
challenge-297/ppentchev/rust/: Cargo.toml  run-clippy.sh
challenge-297/ppentchev/rust/src/: ch_1.rs  ch_2.rs  lib.rs
challenge-312/ppentchev/python/: REUSE.toml  pyproject.toml  ruff-base.toml  run-uvoxen.sh  tox.ini
challenge-312/ppentchev/python/src/pwc_312/: __init__.py  balls_and_boxes.py  defs.py  min_time.py
challenge-312/ppentchev/python/tests/unit/: __init__.py  test_balls_and_boxes.py  test_minimum_time.py
challenge-315/ppentchev/python/: pyproject.toml  ruff-base.toml
challenge-315/ppentchev/python/src/pwc315/: __init__.py  defs.py  find_third.py  find_words.py
challenge-315/ppentchev/python/src/wasm_find_third/: __init__.py
challenge-315/ppentchev/python/src/wasm_find_third_bindings/: __init__.py
challenge-315/ppentchev/python/src/wasm_find_third_bindings/exports/: __init__.py
challenge-315/ppentchev/python/src/wasm_find_words/: __init__.py
challenge-315/ppentchev/python/src/wasm_find_words_bindings/: __init__.py
challenge-315/ppentchev/python/src/wasm_find_words_bindings/exports/: __init__.py
challenge-315/ppentchev/python/tests/unit/: __init__.py  test_find_words.py
challenge-315/ppentchev/rust/wasm_find_third/: Cargo.toml
challenge-315/ppentchev/rust/wasm_find_third/src/: bindings.rs  lib.rs
challenge-315/ppentchev/rust/wasm_find_third/wit/: world.wit
challenge-315/ppentchev/rust/wasm_find_words/: Cargo.toml
challenge-315/ppentchev/rust/wasm_find_words/src/: bindings.rs  lib.rs
challenge-315/ppentchev/rust/wasm_find_words/wit/: world.wit
challenge-315/ppentchev/rust/wasm_test_find_third/: Cargo.toml
challenge-315/ppentchev/rust/wasm_test_find_third/src/: bindings.rs  main.rs
challenge-315/ppentchev/rust/wasm_test_find_third/wit/: world.wit
challenge-315/ppentchev/rust/wasm_test_find_words/: Cargo.toml
challenge-315/ppentchev/rust/wasm_test_find_words/src/: bindings.rs  main.rs
challenge-315/ppentchev/rust/wasm_test_find_words/wit/: world.wit
challenge-317/ppentchev/rust/wasm-acronyms/: Cargo.toml
challenge-317/ppentchev/rust/wasm-acronyms/src/: bindings.rs  lib.rs
challenge-317/ppentchev/rust/wasm-acronyms/wit/: world.wit
challenge-317/ppentchev/rust/wasm-test-acronyms/: Cargo.toml
challenge-317/ppentchev/rust/wasm-test-acronyms/src/: bindings.rs  main.rs
challenge-317/ppentchev/rust/wasm-test-acronyms/wit/: world.wit
challenge-317/ppentchev/rust/wasm-test-frings/: Cargo.toml
challenge-317/ppentchev/rust/wasm-test-frings/src/: bindings.rs  main.rs
challenge-317/ppentchev/rust/wasm-test-frings/wit/: world.wit
challenge-336/: README.md
challenge-346/: ch-1.ua  ch-2.ua
perl6/: ch-2a.p6
raku/: ch-1.raku  ch-2.raku
script/: clean-up-dir.sh  create-new-challenge-users.raku  find-the-winner  refresh-stats.sh  remove-empty-dirs.raku  reviewer-stats
stats/: pwc-challenge-001.json  pwc-challenge-002.json  pwc-challenge-003.json  pwc-challenge-004.json  pwc-challenge-005.json  pwc-challenge-006.json  pwc-challenge-007.json  pwc-challenge-008.json  pwc-challenge-009.json  pwc-challenge-010.json  pwc-challenge-011.json  pwc-challenge-012.json  pwc-challenge-013.json  pwc-challenge-014.json  pwc-challenge-015.json  pwc-challenge-016.json  pwc-challenge-017.json  pwc-challenge-018.json  pwc-challenge-019.json  pwc-challenge-020.json  pwc-challenge-021.json  pwc-challenge-022.json  pwc-challenge-023.json  pwc-challenge-024.json  pwc-challenge-025.json  pwc-challenge-026.json  pwc-challenge-027.json  pwc-challenge-028.json  pwc-challenge-029.json  pwc-challenge-030.json  pwc-challenge-031.json  pwc-challenge-032.json  pwc-challenge-033.json  pwc-challenge-034.json  pwc-challenge-035.json  pwc-challenge-036.json  pwc-challenge-037.json  pwc-challenge-038.json  pwc-challenge-039.json  pwc-challenge-040.json  (+369 more)
templates/: PACKAGES.json
test/: README.md  benchmark-data-generator.rakumod  benchmark-scalabiity.raku  benchmark-scalability.raku  install-required-packages.raku  run-syntax-check.raku  test-challenge-perl.pl
(+65758 files in other folders)
