# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = [
  "hatchling >= 1.8, < 2",
  "hatch-requirements-txt >= 0.3, < 0.5",
]
build-backend = "hatchling.build"

[project]
name = "perl-weekly-285"
description = "Parse an expression for selecting stages and tags"
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">= 3.11"
dynamic = ["dependencies", "version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: DFSG approved",
  "License :: Freely Distributable",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Unit",
  "Typing :: Typed",
]

[[project.authors]]
name = "Peter Pentchev"
email = "roam@ringlet.net"

[project.scripts]
"perl-weekly-285" = "perl_weekly_285.__main__:main"

[project.urls]
Homepage = "https://devel.ringlet.net/misc/perl-weekly-285/"
Changes = "https://devel.ringlet.net/misc/perl-weekly-285/changes/"
"Issue Tracker" = "https://gitlab.com/ppentchev/perl-weekly-285/-/issues"
"Source Code" = "https://gitlab.com/ppentchev/perl-weekly-285"

[tool.hatch.build.targets.wheel]
packages = ["src/perl_weekly_285"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/install.txt"]

[tool.hatch.version]
path = "src/perl_weekly_285/defs.py"
pattern = '(?x) ^ VERSION \s* (?: : \s* Final \s* )? = \s* " (?P<version> [^\s"]+ ) " \s* $'

[tool.mypy]
strict = true

[tool.publync.format.version]
major = 0
minor = 1

[tool.publync.build.tox]

[tool.publync.sync.rsync]
remote = "marla.ludost.net:vhosts/devel.ringlet.net/public_html/misc/perl-weekly-285"

[tool.ruff]
extend = "ruff-base.toml"
output-format = "concise"
preview = true

[tool.ruff.lint]
select = ["ALL"]

[tool.test-stages]
stages = [
  "(@check or @docs) and @quick and not @manual",
  "(@check or @docs) and not @manual",
  "@tests and not @manual",
]
