# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perl-weekly-challenge-285"
version = "0.1.0"
rust-version = "1.62"
authors = ["Peter Pentchev <roam@ringlet.net>"]
edition = "2021"
description = "Solve the challenge 285 problems"
readme = "README.md"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
license = "BSD-2-Clause"
categories = ["algorithms"]
keywords = ["perl-weekly-challenge"]

[dependencies]
anyhow = "1"
itertools = "0.13"
thiserror = "1"
tracing = "0.1.40"

[dev-dependencies]
rstest = "0.18"
tracing-test = "0.2.5"
