# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perl-weekly-challenge-287"
version = "0.1.0"
rust-version = "1.58"
authors = ["Peter Pentchev <roam@ringlet.net>"]
edition = "2021"
description = "A solution to the Perl Weekly Challenge 287"
readme = "README.md"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
license = "BSD-2-Clause"
categories = ["algorithms"]
keywords = ["perl-weekly-challenge"]

[dependencies]
anyhow = "1"
nom = "7.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rstest = "0.22"
