# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perl-weekly-challenge-289"
version = "0.1.0"
rust-version = "1.62"
authors = ["Peter Pentchev <roam@ringlet.net>"]
edition = "2021"
description = "A solution to the Perl Weekly Challenge 289"
readme = "README.md"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
license = "BSD-2-Clause"
categories = ["algorithms"]
keywords = ["perl-weekly-challenge"]

[dependencies]
anyhow = "1"
camino = "1.1.9"
clap = "4"
clap_derive = "4"
itertools = "0.13"
rand = "0.8"
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
rstest = "0.22"
tracing-test = "0.2"
