# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perlweeklychallenge-290"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "Solve the tasks in the 290th Perl Weekly Challenge"
license = "BSD-2-Clause"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
keywords = []
categories = [
  "algorithms",
]

[dependencies]
itertools = "0.13"
tracing = "0.1.40"
thiserror = "1.0.64"

[dev-dependencies]
rstest = "0.17.0"
tracing-test = "0.2.5"
