# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perlweeklychallenge-293"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "Solve the tasks in the 293rd Perl Weekly Challenge"
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
keywords = ["perlweeklychallenge"]
categories = [
  "algorithms",
]

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
rstest = ">= 0.17.0, < 0.24"
