# SPDX-FileCopyrightText: Peter Pentchev <roam@ringlet.net>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "perl-weekly-challenge-297"
version = "0.1.0"
rust-version = "1.62"
authors = ["Peter Pentchev <roam@ringlet.net>"]
edition = "2021"
description = "A solution to the Perl Weekly Challenge 297"
readme = "README.md"
repository = "https://github.com/ppentchev/perlweeklychallenge-club"
license = "BSD-2-Clause"
categories = ["algorithms"]
keywords = ["perl-weekly-challenge"]

[dependencies]
thiserror = "2.0.3"
tracing = "0.1.37"

[dev-dependencies]
rstest = ">= 0.17, < 0.24"
tracing-test = "0.2"
