[package]
name = "wasm_find_third"
version = "0.1.0"
edition = "2024"

[dependencies]
find_third = { path = "../find_third" }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-find-third"

[package.metadata.component.dependencies]
