[package]
name = "wasm-acronyms"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Peter Pentchev <roam@ringlet.net>"]

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-acronyms"

[package.metadata.component.dependencies]
