[package]
name = "wasm-test-acronyms"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Peter Pentchev <roam@ringlet.net>"]

[package.metadata.component]
package = "ringlet:pwc317-t1-test-acronyms"

[package.metadata.component.target]
path = "wit"
world = "test-acronyms"

[package.metadata.component.target.dependencies]
"ringlet:pwc317-t1-acronyms" = { path = "../../wasi/wit/acronyms.wit" }

[dependencies]
anyhow = "1.0.98"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
